--- a/src/pages/Charts/Charts.module.css
+++ b/src/pages/Charts/Charts.module.css
@@ -3,9 +3,9 @@
   grid-template-columns: 13% 31% 31% 1fr;
   grid-template-rows: repeat(3, 33%);
   grid-template-areas:
-    'left_informations essay essay highestPercent'
-    'left_informations skills skills highestPercent'
-    'left_informations chooseAndHability chooseAndHability competence';
+    'leftInformations essay essay highestPercent'
+    'leftInformations skills skills highestPercent'
+    'leftInformations chooseAndHability chooseAndHability competence';
   height: calc(100vh - 70px);
   grid-gap: 5px;
   padding: 5px;
