--- a/src/components/PageHeatMap/organisms/HeatTable/HeatTable.module.css
+++ b/src/components/PageHeatMap/organisms/HeatTable/HeatTable.module.css
@@ -1,7 +1,12 @@
+.wrapper {
+  overflow: hidden;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
 .table,
 .table th,
 .table td {
-  border: 1px solid black;
   border-collapse: collapse;
 }
 
@@ -9,19 +14,20 @@
   text-align: center;
   width: 100%;
   color: black;
-  border: 1px solid black;
-  border-collapse: collapse;
+  border-collapse: separate;
+  overflow: scroll;
 }
 
 .table tr th {
-  background-color: var(--azul);
+  background-color: var(--azulescuro);
   color: white;
   font-size: 19px;
+  
 }
 
 .table tr {
-  border: 1px solid black;
   width: 100%;
   line-height: 30px;
+  background-color: white;
 }
 
