--- a/src/pages/HeatMap/HeatMap.module.css
+++ b/src/pages/HeatMap/HeatMap.module.css
@@ -1,10 +1,9 @@
 .main {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: repeat(2, 50%);
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   grid-template-areas: 
-  'heatMap heatMap rightInfo'
-  'heatMap heatMap rightInfo';
+  'heatMap heatMap heatMap rightInfo rightInfo';
   height: calc(100vh - 70px);
   width: 100%;
   grid-gap: 5px;
@@ -14,7 +13,13 @@
 
 .heatMap {
   grid-area: heatMap;
+  height: 100%;
+  background-color: var(--azul);
   width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  border-radius: 4px;
+  box-shadow: var(--shadow);
 }
 
 .rightInfo {
