--- a/src/pages/Charts/Charts.module.css
+++ b/src/pages/Charts/Charts.module.css
@@ -14,7 +14,6 @@
 
 .essay,
 .skills,
-.highestPercent,
 .competence {
   align-items: center;
   display: flex;
@@ -54,4 +53,18 @@
 
 .competence a {
   margin-top: -10px;
+}
+
+.highestPercent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding: 10px;
+  box-shadow: var(--shadow);
 }
