--- a/src/components/PageCharts/atomics/LinkButtom.module.css
+++ b/src/components/PageCharts/atomics/LinkButtom.module.css
@@ -1,14 +1,14 @@
 .linkButtom a {
-    display: flex;
-    align-items: center;
-    background-color: var(--azul2);
-
-    border-radius: 4px;
-    padding: 0px 15px;
-    text-decoration: none;
-    color: white;
+  display: flex;
+  align-items: center;
+  background-color: var(--azul2);
+  width: 100%;
+  border-radius: 4px;
+  padding: 0px 15px;
+  text-decoration: none;
+  color: white;
 }
 
 .linkButtom a:hover {
-    background-color: var(--azulescuro);
+  background-color: var(--azulescuro);
 }
